# MSWT

./: .env.example  .gitignore  README.md  __init__.py  bot.py  config.py  good_servers.json  pyproject.toml  restart-daemon.sh  start-server.sh  test.py
MSWT/: .env  .env-example  bot.py  pyproject.toml  restart-daemon.sh  start-server.sh
MSWT/src/handlers/: __init__.py  bots.py  info.py  restart.py  sh.py  start.py  stop.py
MSWT/src/middlewire/: middlewire.py
sh-module/: mita.sh
src/: __main__.py  container.py
src/bot/: __init__.py  __main__.py  container.py
src/bot/handlers/: __init__.py  bots.py  logs.py  restart.py  sh.py  sh_utils.py  start.py  startsh.py  stopsh.py
src/bot/middlewire/: middlewire.py
src/bot/services/: user_service.py
src/handlers/: __init__.py  bots.py  info.py  restart.py  sh.py  start.py  stop.py
src/middlewire/: middlewire.py
src/services/: __init__.py  user_service.py
src/settings/: main.py
