[project]
name = "mswt"
version = "1.0"
description = "MSWT is a bot for managing your services via Telegram."
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "aiogram>=3.21.0",
    "dependency-injector>=4.48.1",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]
